@@ -25,7 +25,7 @@
 
 extern const char *minor_str[];
 
-#define VERSION "v9.3"
+#define VERSION "v9.4"
 
 #ifndef O_DIRECT
 #define O_DIRECT	040000	/* direct disk access, not easily obtained from headers */
@@ -92,7 +92,7 @@ static int get_powermode  = 0, set_powermode = 0;
 static int set_apmmode = 0, get_apmmode= 0, apmmode = 0;
 static int get_cdromspeed = 0, set_cdromspeed = 0, cdromspeed = 0;
 static int do_IDentity = 0, drq_hsm_error = 0;
-static int do_fwdownload = 0, final_80h = 0;
+static int do_fwdownload = 0;
 static int	set_busstate = 0, get_busstate = 0, busstate = 0;
 static int	set_reread_partn = 0, get_reread_partn;
 static int	set_acoustic = 0, get_acoustic = 0, acoustic = 0;
@@ -972,7 +972,7 @@ static int do_make_bad_sector (int fd, __u16 *id, __u64 lba, const char *devname
 		printf("Corrupting sector %llu (WRITE_UNC_EXT as %s): ", lba, flagged);
 	} else {
 		init_hdio_taskfile(r, ATA_OP_WRITE_LONG_ONCE, RW_WRITE, LBA28_OK, lba, 1, 520);
-		memset(r->data, 0xff, 520);
+		memset(r->data, 0xa5, 520);
 		printf("Corrupting sector %llu (WRITE_LONG): ", lba);
 	}
 	fflush(stdout);
@@ -1358,16 +1358,22 @@ open_ok:
 		}
 	}
 	if (set_cdromspeed) {
-		/* FIXME: the CDROM_SELECT_SPEED ioctl
+		/* The CDROM_SELECT_SPEED ioctl
 		 * actually issues GPCMD_SET_SPEED to the drive.
-		 * But many newer DVD drives want GPCMD_SET_STREAMING instead.
-		 * Perhaps we should just do an sg16 issue here of either opcode?
+		 * But many newer DVD drives want GPCMD_SET_STREAMING instead,
+		 * which we now do afterwards.
 		 */
 		if (get_cdromspeed)
 			printf ("setting cdrom speed to %d\n", cdromspeed);
 		if (ioctl (fd, CDROM_SELECT_SPEED, cdromspeed)) {
 			err = errno;
 			perror(" CDROM_SELECT_SPEED failed");
+		}
+		/* A fix? Applying SET STREAMING command. */
+		printf("setting dvd streaming speed to %d\n", cdromspeed);
+		if (set_dvdspeed(fd, cdromspeed) != 0) {
+			err = errno;
+			perror(" dvd speed setting failed");
 		}
 	}
 	if (set_acoustic) {
@@ -1521,7 +1527,7 @@ open_ok:
 		confirm_i_know_what_i_am_doing("--fwdownload", "You are trying to deliberately overwrite the drive firmware with the contents of the specified file.  If this fails, your drive could be toast.");
 		confirm_please_destroy_my_drive("--fwdownload", "This might destroy the drive and/or all data on it.");
 		id = get_identify_data(fd, id);
-		err = fwdownload(fd, id, fwpath, final_80h);
+		err = fwdownload(fd, id, fwpath);
 		if (err)
 			exit(err);
 	}
@@ -1819,7 +1825,7 @@ static void usage_help (int rc)
 	" -C   check drive power mode status\n"
 	" -d   get/set using_dma flag\n"
 	" -D   enable/disable drive defect management\n"
-	" -E   set cd-rom drive speed\n"
+	" -E   set cd/dvd drive speed\n"
 	" -f   flush buffer cache for device on exit\n"
 	" -F   flush drive write cache\n"
 	" -g   display drive geometry\n"
@@ -2209,10 +2215,6 @@ get_longarg (void)
 	} else if (0 == strcasecmp(name, "fwdownload")) {
 		get_filename_parm(&fwpath, name);
 		do_fwdownload = 1;
-	} else if (0 == strcasecmp(name, "fwdownload80")) {
-		get_filename_parm(&fwpath, name);
-		do_fwdownload = 1;
-		final_80h = 1;
 	} else if (0 == strcasecmp(name, "idle-immediate")) {
 		SET_FLAG1(idleimmediate);
 	} else if (0 == strcasecmp(name, "idle-unload")) {
